# ML-deployment-system-for-autoresearch

./: .env.example  .gitignore  AUDIT_FIXES_SUMMARY.md  AUDIT_STATUS_CONSOLIDATED.md  CLAUDE.md  Dockerfile  Dockerfile.autoresearch  Dockerfile.kfp  EXPLAINATION.md  EXPLANATION.md  Makefile  README.md  dvc.yaml  e2e.md  main.py  metrics.json  mlflow.db  pyproject.toml
.dvc/: config
.github/workflows/: ci.yaml
argocd/: application.yaml
auto_experiment/: auto_loop.py  github_commit.py  history.tsv  program.md
configs/: params.yaml
data/: .gitignore  churn_data.csv.dvc  ieee_cis.parquet.dvc
data/processed/: stats.json
demo/: MANUAL_RECORDING_PLAYBOOK.md
demo/webreel/: .env.example  .gitignore  README.md  RECORDING_PLAN_TRUST_FIRST.md  RECORDING_SCRIPT.md  package-lock.json  package.json  pnpm-lock.yaml
demo/webreel/configs/: argocd.config.json  github-prs.config.json  kfp.config.json  mlflow.config.json  smoke.config.json
jobs/: autoresearch-job.yaml
k8s/: autoresearch-job.yaml  autoresearch-sa.yaml  deployment.yaml  hpa.yaml  kfp-expose.yaml  mlflow.yaml  namespace.yaml  pdb.yaml  service.yaml  serviceaccounts.yaml
pipelines/: churn_pipeline.py  churn_pipeline.yaml  pipeline.py  pipeline.yaml
scripts/: ci_open_image_bump_pr.py  prepare-ieee-cis.py  run-autoresearch.sh  setup-gcp.sh  setup.py
src/: api.py  evaluate.py  features.py  preprocess.py  promote.py  train.py
tests/: conftest.py  test_api.py  test_auto_loop.py  test_auto_loop_e2e.py  test_evaluate.py  test_preprocess.py  test_schema_agnostic.py  test_train.py
(+2 files in other folders)
