[project]
name = "ml-deployment-system-for-autoresearch"
version = "0.1.0"
description = "Generic LLM-driven AutoML harness — plug a binary-classification CSV, watch autoresearch traverse from a bad baseline to a tuned model."
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.88.0",
    "dvc>=3.67.0",
    "dvc-gs>=3.0.2",
    "google-cloud-secret-manager>=2.20.0",
    "fastapi>=0.135.2",
    "kaggle>=2.0.0",
    "kfp>=2.16.0",
    "mlflow>=2.18",
    "numpy>=2.4.4",
    "pandas>=2.2,<3",
    "pydantic>=2.12.5",
    "pyjwt[crypto]>=2.10.1",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "setuptools>=82.0.1",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.8",
]
